# edge-casting-quality-inspection

./: .gitignore  ARTIFACTS.md  GITHUB_UPLOAD_COMMANDS.md  LIMITATIONS.md  Makefile  README.md  RELEASE_SUMMARY.md  REPRODUCIBILITY.md  pyproject.toml  requirements.txt
configs/: dataset.yaml  experiments.yaml  models.yaml
experiments/research_20260601/dedup_training/exported/: micro_edge_dedup_exact_fp32.tflite  micro_edge_dedup_exact_int8.tflite
experiments/research_20260601/dedup_training/metrics/: tflite_exact_metrics.json
experiments/research_20260601/dedup_training/paper/: dedup_training_results_for_nir.md
experiments/research_20260601/dedup_training/tables/: clean_split_counts.csv  dedup_confidence_triage.csv  dedup_edge_benchmark.csv  (+4 more)
experiments/research_20260601/sota/: published_sota_casting_dataset.csv
reports/final_nir/: README_BUILD.md  build.sh  generate_clean_figures.py  main.tex  references.bib
scripts/: 00_download_data.py  01_prepare_dataset.py  02_train_baseline.py  03_train_edge.py  04_export_tflite.py  05_run_benchmarks.py  06_collect_tables.py
src/edge_casting/: __init__.py  paths.py
src/edge_casting/analysis/: benchmark.py  collect_results.py  confidence_triage.py  robustness.py
src/edge_casting/export/: export_tflite.py  quantize_tflite.py
src/edge_casting/models/: mobilenet.py  registry.py  small_cnn.py
src/edge_casting/training/: evaluate.py  train.py
src/edge_casting/utils/: image_transforms.py  metrics.py  seed.py
tests/: test_configs.py  test_dataset_structure.py  test_imports.py  test_models_forward.py
(+32 files in other folders)
